# pdp-comp-analysis

./: .gitignore  DEPLOYMENT.md  README.md  competitor_finder.py  pdp_analyzer.py  pyproject.toml  requirements.txt  supabase_schema.sql
backend/: main.py
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/analyze/: route.ts
frontend/src/app/api/analyze-single/: route.ts
frontend/src/app/api/find-competitor/: route.ts
frontend/src/app/auth/callback/: route.ts
frontend/src/components/: AnalysisResults.tsx  AuthButton.tsx  ComparisonBar.tsx  ScoreRing.tsx
frontend/src/lib/supabase/: server.ts
frontend/src/types/: analysis.ts
prompts/: analysis_prompt.j2  competitor_finder.j2  extract_product_category.j2  find_competitor_brand.j2  find_competitor_url.j2
prototyping/: test_prompts.py
