[project]
name = "pdp-competitive-analysis"
version = "0.1.0"
description = "A tool to compare Product Detail Pages using OpenAI for competitive analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = []

